--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>只言片语导航 &nbsp;- 不懂就搜，一搜就懂</title>
+    <title>╰婲ぷ訫 &nbsp;- 不懂就搜，一搜就懂</title>
     <meta name="keywords" content="只言片语导航,不懂就搜,实用网址,主页导航,简单网址导航">
-    <meta name="description" content="只言片语，可寻万物！"/>
+    <meta name="description" content="╰婲ぷ訫"/>
     <link rel="shortcut icon" href="static/img/favicon.ico">
     <link href="static/css/style.css" rel="stylesheet" type="text/css">
     <!-- 百度统计代码 -->
