--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>╰婲ぷ訫 &nbsp;- 不懂就搜，一搜就懂</title>
-    <meta name="keywords" content="只言片语导航,不懂就搜,实用网址,主页导航,简单网址导航">
+    <title>╰婲ぷ訫 &nbsp;</title>
+    <meta name="keywords" content="╰婲ぷ訫,不懂就搜,实用网址,主页导航,简单网址导航">
     <meta name="description" content="╰婲ぷ訫"/>
     <link rel="shortcut icon" href="static/img/favicon.ico">
     <link href="static/css/style.css" rel="stylesheet" type="text/css">
@@ -28,7 +28,7 @@
         <img src="./static/img/logo.gif" alt="logo">
       </div>
       <div class="logo-right">
-        <span>只言片语，可寻万物</span>
+        <span>╰婲ぷ訫</span>
       </div>
     </div>
     <!-- slogan end -->
