--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
 </div>
 <footer class="inner-center footer">
   <p>
-   <a href="https://github.com/TopVitamin/static-nav" target="_blank"> <img src="./static/css/img/github.png" alt="" height="20" width="20"></a>
+   <a href="https://github.com/zeigu/zeigu.github.io" target="_blank"> <img src="./static/css/img/github.png" alt="" height="20" width="20"></a>
   </p>
-  <p style="margin-top:8px;"> <a href="http://pm.budong.me/" style="color:#8C8C8C;" target="_blank">Copyright © 2019 Hosted by 只言片语</a></p>
+  <p style="margin-top:8px;"> <a href="http://pm.budong.me/" style="color:#8C8C8C;" target="_blank">Copyright © 2021 Hosted by ╰婲ぷ訫</a></p>
  
 </footer>
 <script src="./static/js/jquery.min.js"></script>
