--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!-- 导航地址 start -->
     <div class="nav-content">
       <div class="jj-list">
-        <div class="jj-list-tit">麦 · Mai</div>
+        <div class="jj-list-tit">乐 · Le</div>
         <ul class="jj-list-con">
           <li><a href="https://wws.lanzous.com/b01bf4xuf" class="jj-list-link" target="_blank">电脑软件</a></li>
           <li><a href="https://wws.lanzous.com/b01bf4xxi" class="jj-list-link" target="_blank">安卓软件</a></li>
@@ -84,7 +84,7 @@
         </ul>
       </div>
       <div class="jj-list">
-        <div class="jj-list-tit">胖 · Pang</div>
+        <div class="jj-list-tit">呵 · He</div>
         <ul class="jj-list-con">
           <li><a href="https://www.zhihu.com/" class="jj-list-link" target="_blank">知乎</a></li>
           <li><a href="https://web.okjike.com/feed/" class="jj-list-link" target="_blank">即刻</a></li>
@@ -98,7 +98,7 @@
         </ul>
       </div>
       <div class="jj-list">
-        <div class="jj-list-tit">皮 · Pi</div>
+        <div class="jj-list-tit">呵 · He</div>
         <ul class="jj-list-con">
           <li><a href="https://ke.qq.com/" class="jj-list-link" target="_blank">腾讯课堂</a></li>
           <li><a href="https://study.163.com/" class="jj-list-link" target="_blank">网易云课堂</a></li>
