--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <li><a href="https://wws.lanzous.com/b01bf4xxi" class="jj-list-link" target="_blank">安卓软件</a></li>
           <li><a href="https://note.youdao.com/ynoteshare1/index.html?id=665279db8dec073a2f7f5b89cc9f5a4b&type=notebook" class="jj-list-link" target="_blank">有道</a></li>
           <li><a href="https://pan.baidu.com/share/init?surl=DSjCDjSbbNmV6TGIYFSiuw" class="jj-list-link" target="_blank">百度8ce6</a></li>
-          <li><a href="https://www.so.com/" class="jj-list-link" target="_blank">360搜索</a></li>
+          <li><a href="http://zeii.ys168.com/" class="jj-list-link" target="_blank">ys168</a></li>
           <li><a href="https://www.toutiao.com/search/?keyword=/" class="jj-list-link" target="_blank">头条搜索</a></li>
           <li><a href="https://translate.google.cn/" class="jj-list-link" target="_blank">谷歌翻译</a></li>
           <li><a href="https://fanyi.baidu.com/" class="jj-list-link" target="_blank">百度翻译</a></li>
@@ -166,7 +166,7 @@
   <p>
    <a href="https://github.com/zeigu/zeigu.github.io" target="_blank"> <img src="./static/css/img/github.png" alt="" height="20" width="20"></a>
   </p>
-  <p style="margin-top:8px;"> <a href="http://zeii.ys168.com/" style="color:#8C8C8C;" target="_blank">Copyright © 2021 Hosted by ╰婲ぷ訫</a></p>
+  <p style="margin-top:8px;"> <a href="https://www.biz.tk/" style="color:#8C8C8C;" target="_blank">Copyright © 2021 Hosted by ╰婲ぷ訫</a></p>
  
 </footer>
 <script src="./static/js/jquery.min.js"></script>
