--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
       <div class="jj-list">
         <div class="jj-list-tit">乐 · Le</div>
         <ul class="jj-list-con">
-          <li><a href="https://wws.lanzous.com/b01bf4xuf" class="jj-list-link" target="_blank">电脑软件</a></li>
-          <li><a href="https://wws.lanzous.com/b01bf4xxi" class="jj-list-link" target="_blank">安卓软件</a></li>
+          <li><a href="https://wwa.lanzoui.com/b01bf4xuf" class="jj-list-link" target="_blank">电脑软件</a></li>
+          <li><a href="https://wwa.lanzoui.com/b01bf4xxi" class="jj-list-link" target="_blank">安卓软件</a></li>
           <li><a href="https://note.youdao.com/ynoteshare1/index.html?id=665279db8dec073a2f7f5b89cc9f5a4b&type=notebook" class="jj-list-link" target="_blank">有道</a></li>
           <li><a href="https://pan.baidu.com/share/init?surl=DSjCDjSbbNmV6TGIYFSiuw" class="jj-list-link" target="_blank">百度8ce6</a></li>
           <li><a href="http://zeii.ys168.com/" class="jj-list-link" target="_blank">ys168</a></li>
