--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   <p>
    <a href="https://github.com/zeigu/zeigu.github.io" target="_blank"> <img src="./static/css/img/github.png" alt="" height="20" width="20"></a>
   </p>
-  <p style="margin-top:8px;"> <a href="https://www.biz.tk/" style="color:#8C8C8C;" target="_blank">Copyright © 2021 Hosted by ╰婲ぷ訫</a></p>
+  <p style="margin-top:8px;"> <a href="https://www.cloudflare-cn.com/" style="color:#8C8C8C;" target="_blank">Copyright © 2023 Hosted by ╰婲ぷ訫</a></p>
  
 </footer>
 <script src="./static/js/jquery.min.js"></script>
