--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
         <ul class="jj-list-con">
           <li><a href="https://wwa.lanzoui.com/b01bf4xuf" class="jj-list-link" target="_blank">电脑软件</a></li>
           <li><a href="https://wwa.lanzoui.com/b01bf4xxi" class="jj-list-link" target="_blank">安卓软件</a></li>
+          <li><a href="https://wwa.lanzoui.com/b01cwfgeb" class="jj-list-link" target="_blank">Chrome浏览器插件</a></li>
           <li><a href="https://note.youdao.com/ynoteshare1/index.html?id=665279db8dec073a2f7f5b89cc9f5a4b&type=notebook" class="jj-list-link" target="_blank">有道</a></li>
-          <li><a href="https://pan.baidu.com/share/init?surl=DSjCDjSbbNmV6TGIYFSiuw" class="jj-list-link" target="_blank">百度8ce6</a></li>
           <li><a href="http://zeii.ys168.com/" class="jj-list-link" target="_blank">ys168</a></li>
-          <li><a href="https://www.toutiao.com/search/?keyword=/" class="jj-list-link" target="_blank">头条搜索</a></li>
-          <li><a href="https://translate.google.cn/" class="jj-list-link" target="_blank">谷歌翻译</a></li>
-          <li><a href="https://fanyi.baidu.com/" class="jj-list-link" target="_blank">百度翻译</a></li>
-          <li><a href="http://fanyi.youdao.com/" class="jj-list-link" target="_blank">有道翻译</a></li>
+          <li><a href="http://5233336.ysepan.com/" class="jj-list-link" target="_blank">建养中心</a></li>
+          <li><a href="https://start.me/p/Bn6QRb" class="jj-list-link" target="_blank">start.me</a></li>
+          <li><a href="https://www.123pan.com/s/jPqA-tDxgh" class="jj-list-link" target="_blank">123盘软件</a></li>
+          <li><a href="https://u.pcloud.link/publink/show?code=kZAx0lXZ0FX9LFEFJVRWr5sN7UcV97VTtEjk" class="jj-list-link" target="_blank">pCloud</a></li>
         </ul>
       </div>
       <div class="jj-list">
