--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <ul class="jj-list-con">
           <li><a href="https://wwa.lanzoui.com/b01bf4xuf" class="jj-list-link" target="_blank">电脑软件</a></li>
           <li><a href="https://wwa.lanzoui.com/b01bf4xxi" class="jj-list-link" target="_blank">安卓软件</a></li>
-          <li><a href="https://wwa.lanzoui.com/b01cwfgeb" class="jj-list-link" target="_blank">Chrome浏览器插件</a></li>
+          <li><a href="https://wwa.lanzoui.com/b01cwfgeb" class="jj-list-link" target="_blank">浏览器插件</a></li>
           <li><a href="https://note.youdao.com/ynoteshare1/index.html?id=665279db8dec073a2f7f5b89cc9f5a4b&type=notebook" class="jj-list-link" target="_blank">有道</a></li>
           <li><a href="http://zeii.ys168.com/" class="jj-list-link" target="_blank">ys168</a></li>
           <li><a href="http://5233336.ysepan.com/" class="jj-list-link" target="_blank">建养中心</a></li>
