--- a/index.html
+++ b/index.html
@@ -2144,12 +2144,13 @@
 
         <div class="tops" onclick="returnTop()"><img src="static/picture/miao.gif"></div>
 
-        <script src="static/js/jquery.min.js"></script>
+        <script src="https://lib.baomitu.com/jquery/3.6.0/jquery.min.js"></script>
         <!-- <script src="https://cdnjs.loli.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
         <script src="static/js/fish.js"></script>
-        <script type="text/javascript" color="0,104,183" opacity='0.6' zindex="9" count="65" src="static/js/jquery.js"></script>
+        <script type="text/javascript" color="0,104,183" opacity='0.6' zIndex="9" count="65"
+            src="js/jquery.js?v=20200421"></script>
 
-        <script src="static/js/mas.js"></script>
+        <script src="js/mas.js?v=20220526"></script>
 
 </div></body>
 
