--- a/index.html
+++ b/index.html
@@ -454,98 +454,82 @@
 
                         <a href="https://www.autohome.com.cn/" target="_blank">
 
-                            <img src="./img/newimg/car01.png">
+                            <img src="static/picture/car01.png">
 
                             <span>汽车之家</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="https://www.ithome.com/" target="_blank">
 
-                            <img src="./img/home/ithome.png?v=20210116">
+                            <img src="static/picture/ithome.png">
 
                             <span>IT之家</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="https://tophub.today/" target="_blank">
 
-                            <img src="./img/home/news.png?v=20210116">
+                            <img src="static/picture/news.png">
 
                             <span>今日热榜</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="https://weibo.com/" target="_blank">
 
-                            <img src="./img/home/weibo.png?v=20210116">
+                            <img src="static/picture/weibo.png">
 
                             <span>微 博</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="https://www.toutiao.com/" target="_blank">
 
-                            <img src="./img/newimg/toutiao.com.jpg">
+                            <img src="static/picture/toutiao.com.jpg">
 
                             <span>今日头条</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="https://www.bilibili.com/" target="_blank">
 
-                            <img src="./img/newimg/live.bilibili.com.jpg?v=20210116">
+                            <img src="static/picture/live.bilibili.com.jpg">
 
                             <span>哔哩哔哩</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="https://top.baidu.com/board" target="_blank">
 
-                            <img src="./img/newimg/hot.png">
+                            <img src="static/picture/hot.png">
 
                             <span>热 搜</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a title="需配合梯子使用" href="https://www.youtube.com/" target="_blank">
 
-                            <img src="./img/newimg/ytb.png">
+                            <img src="static/picture/ytb.png">
 
                             <span>YouTube</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="https://www.hnvs.cn/" target="_blank">
@@ -634,276 +618,223 @@
 
                         <a href="https://www.douyin.com/" target="_blank">
 
-                            <img src="./img/newimg/douyin01.png">
+                            <img src="static/picture/douyin01.png">
 
                             <span>抖 音</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="https://www.xiaohongshu.com/explore" target="_blank">
 
-                            <img src="./img/newimg/xiaohongshu.png">
+                            <img src="static/picture/xiaohongshu.png">
 
                             <span>小红书</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="https://www.ctrip.com/" target="_blank">
 
-                            <img src="./img/newimg/ctrip.com.jpg?v=20210116">
+                            <img src="static/picture/ctrip.com.jpg">
 
                             <span>携 程</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="https://www.12306.cn/" target="_blank">
 
-                            <img src="./img/home/12306.png?v=20210116">
+                            <img src="static/picture/12306.png">
 
                             <span>12306</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="https://www.fliggy.com/" target="_blank">
 
-                            <img src="./img/newimg/alitrip.com.jpg?v=20210116">
+                            <img src="static/picture/alitrip.com.jpg">
 
                             <span>飞 猪</span>
 
                         </a>
-
                     </li>
-
                     <!-- <li>
-
                         <a href="https://www.ifanjian.net/" target="_blank">
-
                             <img src="./img/newimg/dddd.png?v=20210116" />
-
                             <span>泛见志</span>
-
                         </a>
-
                     </li> -->
-
                     <li>
 
                         <a href="https://www.amap.com/" target="_blank">
 
-                            <img src="./img/newimg/amap.com.jpg?v=20210116">
+                            <img src="static/picture/amap.com.jpg">
 
                             <span>地 图</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="./more/video.html?version=20230502" target="_blank">
 
-                            <img src="./img/newimg/clapperboard.png">
+                            <img src="static/picture/clapperboard.png">
 
                             <span>影 视</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="https://www.iqiyi.com/" target="_blank">
 
-                            <img src="./img/newimg/aiqiyi.png">
+                            <img src="static/picture/aiqiyi.png">
 
                             <span>爱奇艺</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="https://v.qq.com/" target="_blank">
 
-                            <img src="./img/home/tenxun.png?v=20210116">
+                            <img src="static/picture/tenxun.png">
 
                             <span>腾讯视频</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="https://translate.volcengine.com/translate" target="_blank">
 
-                            <img src="./img/newimg/fanyi.png">
+                            <img src="static/picture/fanyi.png">
 
                             <span>翻 译</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="https://tieba.baidu.com/" target="_blank">
 
-                            <img src="./img/newimg/tieba.baidu.com.jpg?v=20210116">
+                            <img src="static/picture/tieba.baidu.com.jpg">
 
                             <span>贴 吧</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="https://wx.qq.com/" target="_blank">
 
-                            <img src="./img/newimg/wx.png">
+                            <img src="static/picture/wx.png">
 
                             <span>网页微信</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="https://www.yeyulingfeng.com/tools/gpt" target="_blank">
 
-                            <img src="./img/newimg/chat.png">
+                            <img src="static/picture/chat.png">
 
                             <span style="color:#D35400">ChatGPT</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="https://poki.cn/" target="_blank">
 
-                            <img src="./img/newimg/f.png?v=20210116">
+                            <img src="static/picture/f.png">
 
                             <span>游戏厅</span>
 
                         </a>
-
                     </li>
-
                     <!-- <li>
-
                         <a href="https://www.yikm.net/" target="_blank">
-
                             <img src="./img/newimg/f.png?v=20210116" />
-
                             <span>小霸王</span>
-
                         </a>
-
                     </li> -->
-
                     <li>
 
                         <a href="https://www.yeyulingfeng.com/" target="_blank">
 
-                            <img src="./img/newimg/dog.png">
+                            <img src="static/picture/dog.png">
 
                             <span>夜雨聆风</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="https://ke.qq.com/" target="_blank">
 
-                            <img src="./img/home/stu.png?v=20210116">
+                            <img src="static/picture/stu.png">
 
                             <span>腾讯课堂</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="./more/email.html" target="_blank">
 
-                            <img src="./img/newimg/gmail.png?v=20210116">
+                            <img src="static/picture/gmail.png">
 
                             <span>邮箱网盘</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="https://ting.yeyulingfeng.com/" target="_blank">
 
-                            <img src="./img/home/music.png">
+                            <img src="static/picture/music.png">
 
                             <span>听歌房</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="https://huaban.com/discovery" target="_blank">
 
-                            <img src="./img/newimg/huaban.png">
+                            <img src="static/picture/huaban.png">
 
                             <span>花 瓣</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="https://www.huya.com/" target="_blank">
 
-                            <img src="./img/home/huya.png?v=20210116">
+                            <img src="static/picture/huya.png">
 
                             <span>虎 牙</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="https://www.douyu.com/" target="_blank">
 
-                            <img src="./img/newimg/douyu.com.jpg?v=20210116">
+                            <img src="static/picture/douyu.com.jpg">
 
                             <span>斗鱼TV</span>
 
                         </a>
-
                     </li>
 
                     <li>
@@ -922,121 +853,101 @@
 
                         <a href="https://www.wenshushu.cn/" target="_blank">
 
-                            <img src="./img/home/wss.png?v=20210116">
+                            <img src="static/picture/wss.png">
 
                             <span>传文件</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="https://cli.im/deqr" target="_blank">
 
-                            <img src="./img/newimg/cli.im.jpg?v=20201102">
+                            <img src="static/picture/cli.im.jpg">
 
                             <span>二维码</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="http://www.1ppt.com/" target="_blank">
 
-                            <img src="./img/newimg/ppt.png">
+                            <img src="static/picture/ppt.png">
 
                             <span>PPT素材</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="https://www.iloveimg.com/zh-cn" target="_blank">
 
-                            <img src="./img/home/pic.png?v=20210116">
+                            <img src="static/picture/pic.png">
 
                             <span>图片处理</span>
 
                         </a>
-
                     </li>
-
                     <li>
-
                         <a href="https://www.alltoall.net/" target="_blank">
                             <!-- <a href="https://tools.pdf24.org/zh/" target="_blank"> -->
 
-                            <img src="./img/newimg/pdf.png?v=20210116">
+                            <img src="static/picture/pdf.png">
 
                             <span>格式转换</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="./more/pc.html" target="_blank">
 
-                            <img src="./img/newimg/computer.png?v=20210116">
+                            <img src="static/picture/computer.png">
 
                             <span>电脑专区</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="https://web.baimiaoapp.com/" target="_blank">
 
-                            <img src="./img/newimg/web.baimiaoapp.com.png?v=20210116">
+                            <img src="static/picture/web.baimiaoapp.com.png">
 
                             <span>文字识别</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="https://vip.yeyulingfeng.com/" target="_blank">
 
-                            <img src="./img/newimg/dy.png?v=20210116">
+                            <img src="static/picture/dy.png">
 
                             <span>视频解析</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a href="https://ps.gaoding.com/#/" target="_blank">
 
-                            <img src="./img/newimg/photopea.com.jpg?v=20210116">
+                            <img src="static/picture/photopea.com.jpg">
 
                             <span>在线PS</span>
 
                         </a>
-
                     </li>
-
                     <li>
 
                         <a class="icon_box" href="https://www.zhihu.com/" target="_blank">
 
-                            <img src="./img/newimg/zhihu.com.jpg?v=20210116">
+                            <img src="static/picture/zhihu.com.jpg">
 
                             <span>知 乎</span>
 
                         </a>
-
                     </li>
 
                     <li>
