--- a/index.html
+++ b/index.html
@@ -2050,19 +2050,9 @@
 
         <div id="jsi-flying-fish-container">
             <div class="foot">
-                <a href="https://support.qq.com/products/60345/faqs/59314" target="_target">关于我们</a>
+                <a href="https://github.com/zeigu/zeigu.github.io" target="_target">管理</a>
 
-                <a href="https://support.qq.com/products/60345/faqs/59305" target="_taregt">常见问题</a>
-
-                <a href="https://support.qq.com/products/60345#label=show" target="_blank">反馈意见</a>
-
-                <a href="https://www.yeyulingfeng.com/" target="_blank">夜雨聆风</a>
-
-                <a href="/so/" target="_blank" style="color:#259C01;">极速版</a>
-
-                <a href="https://beian.miit.gov.cn/" target="_blank">皖ICP备17022877号</a>
-
-                <p>Copyright &copy; 2017-2023 YeYuLingFeng.com 版权所有</p>
+                <p>Copyright &copy; 2023</p>
             </div>
         </div>
 
